# rpm_test

./: CMakeLists.txt  packgfei.sh
libhello/: CMakeLists.txt  hello.c  hello.h
packaging/: cmake_fei.spec
src/: CMakeLists.txt  main.c
