CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(kflog)

SET(LIB_SOURCE_FILES KfLog.h KfLog.cpp)

ADD_LIBRARY(${PROJECT_NAME} ${LIB_SOURCE_FILES})

INSTALL(FILES KfLog.h DESTINATION "include/log")
INSTALL(DIRECTORY spdlog DESTINATION "include/log")
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION "lib/${CPACK_PACKAGE_NAME}")


SET(LIB_SRC hello.c)
ADD_DEFINITIONS("-DLIBHELLO_BUILD")
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

#dynamic library
ADD_LIBRARY(libhello SHARED ${LIB_SRC})

set_target_properties(libhello PROPERTIES OUTPUT_NAME "hello")

install(TARGETS libhello DESTINATION /usr/lib)
install(FILES ${CMAKE_SOURCE_DIR}/libhello/hello.h DESTINATION /usr/include/hello)